<resources>
    <string name="app_name">Challenge Chapter 4 Binar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_header">Content Header</string>
    <string name="hai_user">Hai user</string>
    <string name="button_logout">Button Logout</string>
    <string name="jadwal_pertandingan">Jadwal Pertandingan</string>
    <string name="add_list">add_list</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="register_button">Register</string>
    <string name="login">Login</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="login_login">Login</string>
    <string name="register_login">Register</string>
    <string name="update_jadwal_pertandingan">Update Jadwal Pertandingan</string>
    <string name="tanggal_update">Tanggal</string>
    <string name="kick_off_update">Kick Off</string>
    <string name="update_update">Update</string>
    <string name="batal_update">Batal</string>
    <string name="anda_yakin_ingin_menghapus_data_ini">Anda yakin ingin menghapus data ini?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="tambah_jadwal_pertandingan">Tambah Jadwal Pertandingan</string>
    <string name="liga_add">Liga</string>
    <string name="tim_home_add">Tim Home</string>
    <string name="tim_away_add">Tim Away</string>
    <string name="tanggal_add">Tanggal</string>
    <string name="kick_off_add">Kick Off</string>
    <string name="tambah_add">Tambah</string>
    <string name="batal_add">Batal</string>
    <string name="liga_inggris">Liga Inggris</string>
    <string name="manchester_united">Manchester United</string>
    <string name="vs">VS</string>
    <string name="manchester_city">Manchester City</string>
    <string name="_7_4_2022">7/4/2022</string>
    <string name="_20_00">20.00</string>
    <string name="button_delete">Button Delete</string>
    <string name="button_edit">Button Edit</string>

    <string name="liga_belum_diisi">Liga belum diisi</string>
    <string name="tim_home_belum_diisi">Tim Home belum diisi</string>
    <string name="tim_away_belum_diisi">Tim Away belum diisi</string>
    <string name="tanggal_belum_diisi">Tanggal belum diisi</string>
    <string name="jam_belum_diisi">Kick off belum diisi</string>

    <string name="username_belum_diisi">Username belum diisi</string>
    <string name="email_belum_diisi">Email belum diisi</string>
    <string name="password_belum_diisi">Password belum diisi</string>
    <string name="konfirmasi_password_belum_diisi">Konfirmasi password belum diisi</string>
    <string name="password_tidak_sama">Password tidak sama</string>
    <string name="tgl_update">__/__/____</string>
    <string name="jam_updt">__.__</string>
    <string name="wib">WIB</string>
    <string name="data_masih_kosong">Data Masih Kosong</string>
    <string name="tgl_add">__/__/____</string>
    <string name="jam_ad">__.__</string>

    <string name="sapaan">Hai</string>

</resources>