<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/item_rv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_liga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liga_inggris"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manchester_united"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toStartOf="@id/tv_vs"
            app:layout_constraintTop_toBottomOf="@id/tv_liga" />
        <TextView
            android:id="@+id/tv_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_liga" />

        <TextView
            android:id="@+id/tv_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manchester_city"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/tv_vs"
            app:layout_constraintTop_toTopOf="@id/tv_vs"
            app:layout_constraintBottom_toBottomOf="@id/tv_vs"/>
        <TextView
            android:id="@+id/tv_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_4_2022"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vs" />

        <TextView
            android:id="@+id/tv_jam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_20_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_tanggal"/>

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/button_delete" />

        <ImageView
            android:id="@+id/ivEdit"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>