<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.UpdateFragment">

    <TextView
        android:id="@+id/tv_jadwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_jadwal_pertandingan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_tanggal"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/tgl_update"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/tv_jadwal"
        app:layout_constraintTop_toBottomOf="@id/tv_jadwal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/tanggal_update"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_tanggal"
        app:layout_constraintTop_toTopOf="@id/tv_tanggal"
        app:layout_constraintBottom_toBottomOf="@id/tv_tanggal"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tv_jam"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:text="@string/jam_updt"
        app:layout_constraintStart_toStartOf="@id/tv_tanggal"
        app:layout_constraintTop_toBottomOf="@id/tv_tanggal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_jam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kick_off_update"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        app:cornerRadius="16dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_jam"
        app:layout_constraintTop_toTopOf="@id/tv_jam"
        app:layout_constraintBottom_toBottomOf="@id/tv_jam"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_primer"
        android:text="@string/update_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/btn_batal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_jam"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_batal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue_primer"
        android:text="@string/batal_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_update"
        app:layout_constraintTop_toBottomOf="@id/tv_jam"/>

</androidx.constraintlayout.widget.ConstraintLayout>