<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DeleteFragment">

    <TextView
        android:id="@+id/tv_message_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anda_yakin_ingin_menghapus_data_ini"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue_primer"
        android:text="@string/ya"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@id/btn_tidak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message_delete"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_tidak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue_primer"
        android:text="@string/tidak"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ya"
        app:layout_constraintTop_toBottomOf="@id/tv_message_delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>